Fix horizontal scrollbar issue by preventing overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   }
 
   body {
-    @apply bg-background-dark text-slate-300 font-inter antialiased scroll-smooth;
+    @apply bg-background-dark text-slate-300 font-inter antialiased scroll-smooth overflow-x-hidden;
   }
 
   h1,
